# lexium_digital_twin

./: .gitignore  README.md
lexium_digital_twin/: CMakeLists.txt  modbus_test.py  package.xml
lexium_digital_twin/launch/: display.launch  display.launch.py  gazebo.launch
lexium_digital_twin/meshes/: Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL  base_link.STL
lexium_digital_twin/urdf/: Lexium_Cobot_L03S_3D-simpl.SLDASM.urdf
lexium_modbus_bridge/: package.xml
src/lexium_digital_twin/: CMakeLists.txt  gripper_test.py  modbus_test.py  test.py
src/lexium_digital_twin/launch/: display.launch.py
src/lexium_digital_twin/meshes/: Link_3.STL
src/lexium_digital_twin/meshes/workcell/: camera_link.STL  piston_link.STL
src/lexium_digital_twin/urdf/: Lexium_Cobot_L03S_3D-simpl.SLDASM.csv  Lexium_Cobot_L03S_3D-simpl.SLDASM.urdf  workcell.urdf.xacro
src/lexium_modbus_bridge/: setup.cfg  setup.py
src/lexium_modbus_bridge/lexium_modbus_bridge/: bridge_lexium.py  bridge_lexium_full.py  lexium_command_bridge.py  modbus_pos_sendtest.py
src/lexium_moveit/: CMakeLists.txt  package.xml
src/lexium_moveit/src/: lexium_trajectory_server.cpp
src/lexium_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/lexium_moveit_config/config/: joint_limits.yaml  kinematics.yaml  lexium_digital_twin.srdf  moveit_controllers.yaml  ros2_controllers.yaml
src/lexium_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  moveit_twin.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
